@@ -1,4 +1,5 @@
 - Added support for the delayed payment enhancements in GF 2.4.13. Workflow processing can now be delayed when using PayPal Standard, Stripe (Checkout), and other payment add-ons which support the Post Payment Action setting.
 - Added the filter gravityflow_timeline_note_add to support customizing the potential note to add to timeline.
 - Added the filter gravityflow_timeline_notes to support customizing the display of timeline notes.
+- Added support for CC: field to all Gravity Flow notification types.
 - Fixed the "view more" link for the Discussion field being output when merge tags are processed for posts created by the Advanced Post Creation Add-On.
